<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:contentDescription="App Logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:hint="@string/editEmail"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext_background"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/editPassword"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext_background"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/loginButton"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/button_text_color"
        android:elevation="6dp"
        android:background="@drawable/rounded_button_background"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/signup_button"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/button_text_color"
        android:elevation="6dp"
        android:background="@drawable/rounded_button_background"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BackButton"
        android:textColor="@color/button_text_color"
        android:backgroundTint="@color/secondary_button_color"
        android:background="@drawable/rounded_button_background"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/signup_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
