<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="times_array">
        <item>1:00</item>
        <item>1:30</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>5:00</item>
        <item>10:00</item>
    </string-array>
</resources>